# config/routes/api.php
@@ -32,6 +32,10 @@ return function (RoutingConfigurator $routes) {
         ->requirements(['standId' => '\d+'])
         ->methods(['PATCH'])
         ->controller([\BikeShare\Controller\Api\V1\Admin\StandsController::class, 'update']);
+    $routes->add('api_v1_admin_stand_rentals', '/api/v1/admin/stands/{standId}/rentals')
+        ->requirements(['standId' => '\d+'])
+        ->methods(['GET'])
+        ->controller([\BikeShare\Controller\Api\V1\Admin\StandsController::class, 'rentals']);
     $routes->add('api_v1_admin_stand_item', '/api/v1/admin/stands/{standName}')
         ->requirements(['standName' => '\w+'])
         ->methods(['GET'])
